[package]
name = "konector"
version = "0.1.01"
edition = "2021"
authors = ["Tâm-Tanguy <tran@tamtanguy.fr>"]
description = "Sync GitHub SSH keys with your servers."
license-file = "LICENSE"
repository = "https://github.com/atomgenie/konector-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
urlencoding = "2.1.2"
futures = "0.3.25"
reqwest = "0.11.12"
