[package]
name = "konector"
version = "0.1.3"
edition = "2021"
authors = ["Tâm-Tanguy <tran@tamtanguy.fr>"]
description = "Sync GitHub SSH keys with your servers."
license-file = "LICENSE"
repository = "https://github.com/atomgenie/konector-rust"
exclude = [
    ".devcontainer/*",
    ".vscode/*",
    "Dockerfile",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.24", features = ["full"] }
urlencoding = "2.1"
futures = "0.3"
reqwest = { version = "0.11"}
serde_yaml = "0.9"

